--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -45,6 +45,13 @@ h4 {
   margin: 0;
   padding: 0;
 }
+h5 {
+  font-family:'NewYorkExtraLarge-Black', sans-serif;
+  font-style: normal;
+  letter-spacing: 0.5px;
+  margin: 0;
+  padding: 0;
+}
 .solid-nav {
   background-color: #0B1320;
   color: #AFC1D0;
